--- a/css/style.css
+++ b/css/style.css
@@ -484,5 +484,5 @@ footer{
         z-index: -1;
         width: 100%;
         height: 139px;
-        background-color:#262626;
+        background-color:none;
     }
